--- a/replicationcontroller.yml
+++ b/replicationcontroller.yml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: ReplicationController
 metadata:
-  name: durva-test-Controller
+  name: durva.test.controller.com
 spec:
   replicas: 2
   selector:
